[tool.poetry]
name = "DANE"
version = "0.3.9"
description = "Utils for working with the Distributed Annotation and Enrichment system"
readme = "README.md"
authors = [
    "Nanne van Noord <n.j.e.vannoord@uva.nl>",
    "jblom <jblom@beeldengeluid.nl>"
]
license = "Apache License 2.0"
repository = "https://github.com/CLARIAH/DANE"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "dane" }
]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch7 = "^7.17.7"
pika = "^1.3.1"
yacs = "^0.1.8"
requests = "^2.28.1"
urllib3 = "^1.26.12"
boto3 = "^1.26.155"

[tool.poetry.dev-dependencies]
mockito = "^1.4.0"
pytest = "^7.2.0"
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
types-requests = "^2.28.11.2"
types-urllib3 = "^1.26.25.1"
typing-extensions = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
  "test",
]
addopts = [
#  "--cov",
]

[tool.coverage.run]
omit = [
  "test/*"
]

[tool.black]
line-length = 88
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
  )/
)
'''

[tool.mypy]
python_version = "3.10"
exclude = ['docs', 'examples']

[[tool.mypy.overrides]]
module = [
  'dane.*',
  'mockito',
  'pika',
  'yaml',
  'yacs.*',
  "boto3",
]
ignore_missing_imports = true
